--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -16,10 +16,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# MAKE THE API CALL TO GET ALL THE NETWORKS\n",
+    "url = 'https://api.citybik.es/v2/networks'\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "networks_data = response.json()\n",
+    "bike_networks_df = pd.json_normalize(networks_data['networks'])\n",
+    "\n",
+    "# SAVE RESULTS TO CSV FILE\n",
+    "bike_networks_df.to_csv(\"../csv_folder/df_networks.csv\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done. Total responses saved: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CREATE AN EMPTY PYTHON LIST\n",
+    "results = []\n",
+    "\n",
+    "# CALL CITYBIK API\n",
+    "url = \"https://api.citybik.es/v2/networks/bixi-toronto\"\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    results.append(response.json())\n",
+    "else:\n",
+    "    print(f\"Request failed with status code {response.status_code}\")\n",
+    "    print(f\"Response content: {response.text}\")\n",
+    "\n",
+    "# SAVE RESULTS TO JSON FOLDER\n",
+    "with open(\"../json_folder/citybik.json\", \"w\") as outfile:\n",
+    "    json.dump(results, outfile, indent=4)\n",
+    "\n",
+    "print(\"Done. Total responses saved:\", len(results))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,7 +91,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# LOAD DATA FROM JSON\n",
+    "city_bikes = json.load(open(\"../json_folder/citybik.json\"))\n",
+    "\n",
+    "# PARSE THROUGH JSON\n",
+    "city_bikes_df =[]\n",
+    "for entry in city_bikes[0]['network']['stations']:\n",
+    "    city_bikes_df.append((entry['name'], entry['latitude'], entry['longitude'],entry['timestamp'],entry['free_bikes'],entry['empty_slots'], entry['extra']['renting'],entry['extra']['returning'],entry['extra']['ebikes'])) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,13 +117,299 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>free_bikes</th>\n",
+       "      <th>empty_slots</th>\n",
+       "      <th>renting</th>\n",
+       "      <th>returning</th>\n",
+       "      <th>ebikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Summerhill Ave / Maclennan Ave</td>\n",
+       "      <td>43.685924</td>\n",
+       "      <td>-79.376304</td>\n",
+       "      <td>2025-07-29T03:42:28.795612+00:00Z</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Queen St E / Joseph Duggan Rd</td>\n",
+       "      <td>43.667763</td>\n",
+       "      <td>-79.308117</td>\n",
+       "      <td>2025-07-29T03:42:28.933107+00:00Z</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Victoria Park Ave / Danforth Ave</td>\n",
+       "      <td>43.691468</td>\n",
+       "      <td>-79.288619</td>\n",
+       "      <td>2025-07-29T03:42:28.879177+00:00Z</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Navy Wharf Crt / Bremner Blvd</td>\n",
+       "      <td>43.640722</td>\n",
+       "      <td>-79.391051</td>\n",
+       "      <td>2025-07-29T03:42:28.733970+00:00Z</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>420 Wellington St W</td>\n",
+       "      <td>43.643834</td>\n",
+       "      <td>-79.396649</td>\n",
+       "      <td>2025-07-29T03:42:28.788527+00:00Z</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>457 King St W</td>\n",
+       "      <td>43.645209</td>\n",
+       "      <td>-79.396074</td>\n",
+       "      <td>2025-07-29T03:42:28.791021+00:00Z</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>933</th>\n",
+       "      <td>Danforth Ave / Coxwell Ave</td>\n",
+       "      <td>43.683378</td>\n",
+       "      <td>-79.322961</td>\n",
+       "      <td>2025-07-29T03:42:28.788025+00:00Z</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>Bloor St W / Brock Ave</td>\n",
+       "      <td>43.658988</td>\n",
+       "      <td>-79.438715</td>\n",
+       "      <td>2025-07-29T03:42:28.879738+00:00Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>935</th>\n",
+       "      <td>Wells Hill Ave / St. Clair Ave W</td>\n",
+       "      <td>43.683351</td>\n",
+       "      <td>-79.415620</td>\n",
+       "      <td>2025-07-29T03:42:28.791375+00:00Z</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>936</th>\n",
+       "      <td>Bay St / Dundas St W</td>\n",
+       "      <td>43.655351</td>\n",
+       "      <td>-79.383460</td>\n",
+       "      <td>2025-07-29T03:42:28.934625+00:00Z</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>937 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 name   latitude  longitude  \\\n",
+       "0      Summerhill Ave / Maclennan Ave  43.685924 -79.376304   \n",
+       "1       Queen St E / Joseph Duggan Rd  43.667763 -79.308117   \n",
+       "2    Victoria Park Ave / Danforth Ave  43.691468 -79.288619   \n",
+       "3       Navy Wharf Crt / Bremner Blvd  43.640722 -79.391051   \n",
+       "4                 420 Wellington St W  43.643834 -79.396649   \n",
+       "..                                ...        ...        ...   \n",
+       "932                     457 King St W  43.645209 -79.396074   \n",
+       "933        Danforth Ave / Coxwell Ave  43.683378 -79.322961   \n",
+       "934            Bloor St W / Brock Ave  43.658988 -79.438715   \n",
+       "935  Wells Hill Ave / St. Clair Ave W  43.683351 -79.415620   \n",
+       "936              Bay St / Dundas St W  43.655351 -79.383460   \n",
+       "\n",
+       "                             timestamp  free_bikes  empty_slots  renting  \\\n",
+       "0    2025-07-29T03:42:28.795612+00:00Z           3            5        1   \n",
+       "1    2025-07-29T03:42:28.933107+00:00Z          10            9        1   \n",
+       "2    2025-07-29T03:42:28.879177+00:00Z           2           16        1   \n",
+       "3    2025-07-29T03:42:28.733970+00:00Z           2            4        1   \n",
+       "4    2025-07-29T03:42:28.788527+00:00Z           4            9        1   \n",
+       "..                                 ...         ...          ...      ...   \n",
+       "932  2025-07-29T03:42:28.791021+00:00Z           5           12        1   \n",
+       "933  2025-07-29T03:42:28.788025+00:00Z          14            1        1   \n",
+       "934  2025-07-29T03:42:28.879738+00:00Z           0           10        1   \n",
+       "935  2025-07-29T03:42:28.791375+00:00Z           0           15        1   \n",
+       "936  2025-07-29T03:42:28.934625+00:00Z           1           52        1   \n",
+       "\n",
+       "     returning  ebikes  \n",
+       "0            1       0  \n",
+       "1            1       1  \n",
+       "2            1       0  \n",
+       "3            1       0  \n",
+       "4            1       0  \n",
+       "..         ...     ...  \n",
+       "932          1       0  \n",
+       "933          1       5  \n",
+       "934          1       0  \n",
+       "935          1       0  \n",
+       "936          1       0  \n",
+       "\n",
+       "[937 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "city_bikes_df = pd.DataFrame(city_bikes_df, columns=['name','latitude','longitude','timestamp','free_bikes','empty_slots','renting','returning','ebikes'] )\n",
+    "\n",
+    "# WRITE DATAFRAME TO CSV\n",
+    "city_bikes_df.to_csv(\"../csv_folder/city_bikes_df.csv\")\n",
+    "\n",
+    "\n",
+    "city_bikes_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>free_bikes</th>\n",
+       "      <th>empty_slots</th>\n",
+       "      <th>renting</th>\n",
+       "      <th>returning</th>\n",
+       "      <th>ebikes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, latitude, longitude, timestamp, free_bikes, empty_slots, renting, returning, ebikes]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# CHECK FOR NULLS\n",
+    "city_bikes_df[city_bikes_df.isnull().any(axis=1)]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "panda",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
